--- a/content/.meta.md
+++ b/content/.meta.md
@@ -4,5 +4,15 @@ views:
         region: flash
         template: anax/v2/image/default
         data:
-            src: "image/theme/tree.jpg?width=1100&height=150&crop-to-fit&area=0,0,30,0"
+            #src: "image/theme/tree.jpg?width=1100&height=150&crop-to-fit&area=0,0,30,0"
+            src: "image/overhead.jpg?width=1100&height=180&crop-to-fit&area=10,10,0,10"
+
+    byline:
+        region: main
+        template: anax/v2/block/default
+        sort: 2
+        data:
+            meta:
+                type: single
+                route: block/byline
 ---
