--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -4,3 +4,20 @@ Redovisning kmom01
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+
+#### Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser?
+Nej, att arbeta med ramverk är helt nytt för mig. Men genom att använda sig utav detta i aktuell kursmoment har det öppnat upp ett helt nytt perspektiv för mig i programmering. Jag kan se fördelarna med att använda Markdown, som vi använde för första gången i detta kursmoment, för enkelhetens skull i programmering där man enbart kan fokusera på att skapa de olika delarna av hemsidan, snarare än att se till att taggar och placeringar ligger rätt.
+
+#### Det blev en del nya verktyg och tekniker i labbmiljön och för att jobba med redovisa sidan, är du bekant med några av dem sedan tidigare?
+Jag är inte bekant vid dessa verktyg och tekniker sedan tidigare. Det var, som nämnt ovan, en ny miljö men jag kan absolut se användbarheten i det. Jag ser fram emot att få utveckla dessa kunskaper vidare under kursens gång för att vidareutveckla dessa och kunna applicera dem som rutin när jag programmerar.
+
+#### Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarhet för webben?
+Ja, att man måste ha bra artistisk fantasi för att kunna lyckas skapa en snygg hemsida och för att designa den, vilket jag inte har. Men under kursens gång kommer jag få kunna lära mig mer vad gäller design, och bara detta kursmoment har varit en bra övning i att sätta sig in i de olika delarna separat och stylea dem vilket i sin tur skapar en enhetlig sida. Detta gör att fantasin sätts på prov och man skapar en fin sida utan att man ens tänker på denna förutfattade mening.
+
+#### Hur kändes det att styla webbplatsen med CSS? Gick det bra?
+I sin helhet gick det bra. Dock krävdes det rätt lång tid för mig att få till navbaren, då jag fastnade på att få till den som jag ville. När jag väl fick den på plats gick det relativt snabbt, med den begränsade kunskap som jag har, att få till resten av sidan.  
+På sidorna "Redovisning" och "Verktyg" har jag dock inte kunnat få till att breadcrumb-list ul ska hamna bredvid varandra, separarerade med ">>", istället för på två olika rader.  
+På "Om"-sidan lyckades jag inte, trots många försök, få upp sido-baren i samma nivå som artikeln på sidan. Jag hade även önskat döpa om bilden på denna sida till ett element som jag kan justera, och hade isåfall satt den centrerad istället för att den hänger med ut till höger, då jag satte en "float: right;" på figure-elementet på förstasidan.
+
+#### Vilken är din TIL för detta kmom?
+Det är utan tvekan användningen av Markdown i programmeringssyfte. Det är ett väldigt smidigt verktyg som jag är väldigt imponerad utav just vad gäller att skapa enkelhet i programmering.
