--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -4,3 +4,18 @@ Redovisning kmom02
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
+
+#### Vad tycker du om LESS och det sättet vi jobbar med LESS-moduler?
+Jag tycker att LESS är ett väldigt användbart verktyg. Det är något rörigt till en början men man förstår syftet och hur man ska jobba rätt snabbt. Instruktionsvideon med Mikael var till stor hjälp i detta kursmoment, där det blev tydligare med just navigeringen i katalogerna.
+
+#### Är du bekant med Makefiler och make sedan tidigare, eller något liknande byggverktyg? Vad anser du om det?
+Nej, då jag inte har så mycket erfarenhet inom programmering sedan tidigare var Makefiler och make helt nytt för mig. Jag ser fördelarna med verktyget, men på grund av min bristande erfarenhet sedan tidigare, så har vi inte använt den tillräckligt för att jag ska kunna skapa en ordentlig uppfattning. Dock kan jag se hur användbart byggverktyget är när hemidorna och datan för dessa blir större och mer komplexa.
+
+#### Hur kändes det att kompilera LESS till CSS, var det något du reflekterade över?
+Jag som tycker om ordning och reda, tyckte att det blev väldigt mycket tydligare och mer städat genom att använda sig av kompilering av LESS till CSS. Detta påminde något om hur man kopplar samman filer och data i PHP, vilket gjorde att man förstod konceptet lite bättre.
+
+#### Kommentera ditt tema, hur kan man beskriva dess design och hade du några planer på “design” när du byggde ditt tema?
+Mitt tema bygger på enkelhet, och stilrent utseende. Jag ville satsa på färger i en fördelning där färgerna passar bra ihop men att man inte känner att det blir för mycket färger heller. Min plan när jag började bygga denna design var att försöka få allt att hamna på rätt plats. Därefter försökte jag hitta en röd tråd bakom designen för att få hela hemsidan att se enhetlig ut. Detta ledde till att jag började strukturera sidan där slutresultatet blev som det är nu. Trots förbättringsområden fortfarande är jag väldigt nöjd med hur den ser ut för närvarande.
+
+#### Vilken är din TIL för detta kmom?
+Min TIL för detta kursmoment, bortsett från LESS, är hur jag ska kunna förenkla koden i CSS. Tidigare har jag försökt varit tydlig för mig själv och plockat enstaka avsnitt av sidan för att skriva en kod på dem separat, men insåg under detta kursmoment fördelen av att klumpa samman dessa. Vid längre filer blir det dels svårare att hitta bland koden men det blir även en väldigt lång fil där det finns risk för återupprepning.
