Adding all updates for KMOM03

--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -4,3 +4,24 @@ Redovisning kmom03
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+
+#### Hur känns det att vara styrd till ett vertikalt grid, hämmande eller stödjande?
+I tidigare kursmoment och kurser så har vi inte haft det vertikala gridet att förhålla oss till. Då har man behövt få sina diverse delar på sin plats genom att använda margin, padding och andra breddanpassade verktyg för att sidan ska se bra ut. Genom att introducera vertikala grid på sidan underlättar detta placeringen och designläggandet av sidan nämnvärt.
+
+#### Hur känns det att jobba med ett typografiskt horisontellt/baseline grid, ser du någon poäng med det?
+Det gör jag absolut, i nuläget används det inte i lika stor omsträckning som det vertikala gridet. Men även här gäller det att genom simplifiering av de olika dokument som man använder, och samla all kod på ett ställe, så underlättar det i sidstrukturen. Det blir enklare att ha en övergripande kod som täcker samtliga textdelar och kan justeras på ett enda ställe istället för att pilla igenom hela kodfilen och hitta de små delarna separat.
+
+#### Berätta om hur du valde typsnitt till din webbplats.
+I Mikaels videoserie där han går igenom de olika delarna av detta kursmoment på ett ypperligt sätt, har han lagt in koden för headings, body och code i kmom03.less. Det kan vara på grund av att jag nu har vant mig vid dessa typsnitt, men när jag valde samma typsnitt till mig sida, vilka var Garamond för headings, MyriadPro för body och Courier för code. Dessa är inlagda i kmom03.less filen, så de skriver över defaultvärden som inkorporeras från typography-defaults.less filen.
+
+#### Har du jobbat med liknande gridbaserade layouttekniker sedan tidigare?
+Nej, det har jag inte, utan detta var ett helt nytt koncept för mig. Jag blev väldigt exalterad när jag fick lära mig detta kursmoment då jag i tidigare kursmoment har känt att det bör finnas något enklare sätt att sätta ett gemensamt tema för sin sida, samt att kunna placera ut sina delar på olika platser på sidan utan att behöva räkna ut sidans bredd och anpassa det manuellt.
+
+#### Hur känns det att jobba med LESS och moduler? Lyckas du återanvända moduler mellan teman för kmom02 och kmom03?
+I början var det lite förvirrande att hålla reda på alla filer och försöka navigera mellan dem för att förstå vilken information det var som skulle in i vilken fil. I detta kursmoment har dock den osäkerheten börjat släppa och jag kan enklare navigera bland all data, för att förstå vilka delar det är som samverkar och hur koden ska struktureras. Jag började använda samtliga moduler från kmom02 i detta kursmoment, men har sedan under tiden städat bort delar som jag hade tidigare, men som inte är nödvändiga nu med tanke på introduktionen av vgrid och hgrid samt typografin.
+
+#### Hur gick det med din responsivitet för webbplatsen?
+Att få in responsivitetet på hemsidan gick bra, jag valde att sätta att responsiviteten skulle aktiveras vid 800px för region-main med både 2 och 3 sidobarer. Detta beslut tog jag då jag testade olika storlekar, men har satt att navbaren försvinner vid 800px för att komprimera hemsidan, varför det kändes logiskt och mest stilrent att i samma ändring på sidan även anpassa resterande delar.
+
+#### Vilken är din TIL för detta kmom?
+Mitt TIL för detta kursmoment är själva uppgiften i sig, att integrera vgrid samt hgrid för att kunna anpassa sin sida och skapa en enhetlighet på hemsidan. Som nämnt ovan har jag tidigare ponerat på just detta då det har varit väldigt mycket småjusteringar med att försöka få de olika delarna på rätt plats, varför det var väldigt smidigt att introducera och använda sig utav vgrid. 
