Uploading updates for KMOM04

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -4,3 +4,28 @@ Redovisning kmom04
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+
+#### Kommentera kort om skrivuppgiften, någon som är värt att nämna från arbetet med den?
+Skrivuppgiften var en bra övning att få navigera runt och börja tänka på färgscheman, som var huvudämnet i detta kursmoment. Under analysen av andra sidor fick man möjlighet att tänka till kring uppbyggnad, syfte och budskap som olika sidor försöker förmedla. Det går även att se liknelser mellan sidor inom samma kategori, ex näthandel, teknik eller välgörenhet, kring hur dessa sidor använder sig av liknande verktyg för att få fram sitt budskap och fånga användarens intresse.
+
+#### Berätta kort om din tanke bakom respektive teman, hur tolkade du “minimalistisk”, “colorful” och “dark”.
+Minimalistisk tolkar jag som ljus, inte så mycket färger och de inslag av färger som finns är från det ljusa spektrat. Placeringen av objekten och texten är det som ska stå ut i detta tema.  
+Colorful tolkar jag precis som det låter, med väldigt mycket färg från mitten av färgspektrat, och väldigt lite inslag av svart och vitt.  
+Dark tolkade jag som mot det mörkare delen av spektrat, mer svart och grått-hållet.
+
+#### Vilket färgschema valde du till respektive tema och hur valde du att använda färgerna (mer eller mindre eller lika mycket av alla färger)?
+Till den minimalistiska försökte jag få in ett analogt färgschema, med närliggande färger för att skapa en gemenskap och lugnare stämning. Jag valde att fokusera på väldigt ljus grå färg och hade olika nyanser av denna som bakgrund till artikeln, navbaren och sidonavbarerna. Detta gjorde att själva sidan får en väldigt ljus känsla och fokus läggs på texten, med färginslag från bild och figurer.  
+Colorful temat fick en blandning av alla färger, för att häva fram detta valde jag extremiteterna vilket blir mer utav ett triadiskt färgschema, i ett sätt att överdriva denna visuella reaktion. Navbaren och footer fick en grön färg, med en body med blå bakgrundsfärg och artikeln fick en röd bakgrundsfärg. sidonavbarerna fick behålla sin gråa färg, då detta tema var en tolkning av att ju fler färger som används desto bättre stämmer det överens med temat.  
+Till dark temat valde jag det monokromatiska färgschemat, där grunden med navbaren och sidonavbarerna är svarta och artikeln samt bodyn har en mörkgrå nyans, vilket ger det generella intrycket av mörker på sidan.
+
+#### Valde du att jobba med accentfärg och isåfall hur?
+I både det minimalistiska temat som dark temat valde jag att jobba med accentfärger från figurer och bilder. Jag tyckte att konceptet från skrivuppgiften som vi insåg med klädesbutiker var väldigt intressant, där basen var i neutrala färger och man lyckades lyfta fram sina produkter genom bilderna. Detta var något som jag ville testa i dessa teman och valde därför att behålla grundfärgerna på sidan väldigt neutrala.
+
+#### Hur tänkte du kring valet av typografi?
+Med avseende på typografin för dessa teman var detta enbart ett medvetet experiment genom att testa de olika typografiska lösningarna genom att välja de fontfamily-varianterna som fanns tillgängliga i typographic-grid. Kombinationen av de olika mellan header, body och code var att försöka få till en kombination av de olika fonterna. Till det minimalistiska temat försökte jag få till en lite diskretare font som inte stod ut så mycket utan att det skulle krävas lite analys för att lägga märke till detaljerna. Colorful temat fick en lite mer vågad val av font baserat på tolkning av temat, där jag satte rubrikerna i Courier fonten. Till dark temat gick jag åter till konceptet för minimalistiska och valde lite mer diskreta teman som inte skulle stå ut så mycket.
+
+#### Berätta om din kodstruktur av teman, jobbade du med bastema och hur löste du anpassningarna till de olika temana?
+Jag valde att skapa ett bastema som jag kallade för kmom04.less som var kopplat till en duplicering av filerna vgrid.less och base_kmom03.less som jag valde att kalla för kmom04_vgrid.less respektive base_kmom04.less. För varje tema skapade jag en ny kmom04_vgrid.less och base_kmom04.less för att kunna ändra om färgerna och fonterna för respektive tema. Bastemat i grunden är samma som för kmom03, men med ett nytt namn anpassat till aktuellt kursmoment.
+
+#### Vilken är din TIL för detta kmom?
+Mitt TIL för detta kursmoment är användningen av Adobe Color och färgläggning av min hemsida enligt analoga, monokromatiska, komplementära eller triadiska färgscheman. Då jag tidigare har imponerats av färgläggning på olika hemsidor var detta första gången som jag analyserade de faktiska färgerna och vid eftertanke började förstå koncepten och anledningen till färgvalen.
