--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -4,3 +4,18 @@ Redovisning kmom05
 =========================
 
 Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+
+#### Berätta kort om erfarenheterna med din undersökning av webbplatsers laddningstid och vad du kom fram till.
+Rent generellt så var detta en väldigt användbar uppgift som fick en att analysera en hemsidas prestanda mer utöver det vanliga. Att få lära sig använda verktyg som PageSpeed och devtools för att utforska hur många resurser som respektive läser in, storleken på sidorna och dess påverkan på laddningstiden var nyttig information som man kan använda i sin programmering framöver.
+
+#### Har du några funderingar kring Cimage och dess nytta och features? Vilka bildverktyg använder du själv normalt sett?
+Normalt sett så använder jag Snapseed och Afterlight i min iPhone X och renderar mina bilder. Detta skapar ett tema som jag alltid har på mina bilder. Dock var det nyttigt att få använda sig utan Cimage och dess funktioner också. Framöver när jag behöver använda bilder som jag vill rendera så kommer det nog givetvis gå via Cimage.
+
+#### Hur gick det att jobba med modulen @desinax/figure och hur är din syn på modulen?
+Det gick bra. Det är en väldigt användbar modul som är enkel att förstå och använda. Det som är positivt är att den är enhetlig oavsett vad för typ av jobb man utför, den kommer att fungera likadant och passa in i allt.
+
+#### Vad är din egen allmänna uppfattning kring bilder för webben, nedladdningstider, responsiva bilder och allmänt kring bildbehandling för webben?
+Då jag tidigare aldrig har jobbat inom, eller med bildredigering, eller ens gjort en bildanalys mer än att reagera på att en sida verkar inbjudande eller inte, så är det svårt att svara på frågan. Under detta kursmoment fick vi djupdyka i ämnet och detta öppnade upp en ny värld med ett nytt perspektiv. Att lägga en ordentlig tanke bakom hur bilderna ska presenteras och placeras är något som är minst lika viktigt än själva utseendet på sidan, för att skapa en bra användarupplevelse.
+
+#### Vilken är din TIL för detta kmom?
+Mitt TIL för denna kurs är Cimage och bloggen. Jag tyckte att det var spännande och roligt att skriva blogginlägg kring hamburgare, och tyckte om känslan av en generell struktur där nya inlägg enkelt kunde adderas. Vidare var hela användningen av markdown för att vidareutveckla sidorna något som jag byggde vidare min kunskap i.
